{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 22,
  "lineage": "a5f94ff2-758e-19c5-d7fb-96bcb7083fc6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.223.114.56",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-07T22:26:25.849-08:00",
            "id": "projects/instahelper-1772547417/regions/us-central1/addresses/monitoring-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "monitoring-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "instahelper-1772547417",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/addresses/monitoring-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "instahelper_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/instanceGroups/instahelper-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-03T06:29:38.083-08:00",
            "enable_cdn": false,
            "fingerprint": "PYUnLiDO7XQ=",
            "generated_id": 3439697911524052669,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/healthChecks/instahelper-health-check"
            ],
            "id": "projects/instahelper-1772547417/global/backendServices/instahelper-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "instahelper-backend-service",
            "port_name": "http",
            "project": "instahelper-1772547417",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/backendServices/instahelper-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.instahelper_health",
            "google_compute_instance.app_server",
            "google_compute_instance_group.instahelper_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T22:26:25.117-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/instahelper-1772547417/global/firewalls/allow-grafana",
            "log_config": [],
            "name": "allow-grafana",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
            "priority": 1000,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/firewalls/allow-grafana",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "monitoring-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-03T06:28:38.370-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/instahelper-1772547417/global/firewalls/instahelper-allow-health-check",
            "log_config": [],
            "name": "instahelper-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
            "priority": 1000,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/firewalls/instahelper-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-balanced-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-03T06:28:37.483-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/instahelper-1772547417/global/firewalls/instahelper-allow-http",
            "log_config": [],
            "name": "instahelper-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
            "priority": 1000,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/firewalls/instahelper-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T22:26:25.337-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/instahelper-1772547417/global/firewalls/allow-prometheus",
            "log_config": [],
            "name": "allow-prometheus",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
            "priority": 1000,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/firewalls/allow-prometheus",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "monitoring-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-03T06:28:38.157-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/instahelper-1772547417/global/firewalls/instahelper-allow-ssh",
            "log_config": [],
            "name": "instahelper-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
            "priority": 1000,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/firewalls/instahelper-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "130.211.25.158",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-03T06:28:24.225-08:00",
            "id": "projects/instahelper-1772547417/global/addresses/instahelper-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "instahelper-lb-ip",
            "prefix_length": 0,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/addresses/instahelper-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "instahelper_http_forwarding",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/instahelper-1772547417/global/forwardingRules/instahelper-http-forwarding-rule",
            "ip_address": "130.211.25.158",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "instahelper-http-forwarding-rule",
            "port_range": "80-80",
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/forwardingRules/instahelper-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/targetHttpProxies/instahelper-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.instahelper_backend",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.instahelper_health",
            "google_compute_instance.app_server",
            "google_compute_instance_group.instahelper_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.instahelper_http_proxy",
            "google_compute_url_map.instahelper_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/disks/instahelper-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/instahelper-1772547417/zones/us-central1-a/instances/instahelper-server",
            "instance_id": "5243085813608828637",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCWC436Z6OQrUXXgNAPLtvX25Kn1uR1DUIWhLYjmsksmNtSoqpzBXc81ijJn9F3/rmnkPYA7YYyZIDF7ivAbI+U0Yp56PCYMDwBcuNyKHxu3h2So2IiBbD5JDut3lL2J1d98YGrUGFNt0gu9vp87TJR07iSHnYae37WtNqYRvhoSJBwY4E9GG+PNm4zEE8Utay6c/dD2FdabGFvCwLJlVfwgaIInr/cooGfqZcphG+lI/cb2B2LwYrlYD5D04wQoVGSc/IgW4TMG1L+q6FmjpSX+1tz89gzpb7yFZD8jpNysrdWPoeq+K0QGMY8RBjf/E67SC3IbZ6uyraGuQCx3pWWUALYaP5LBooou6hVXg2z8SQ0G13pUnj8IB58/h4FoC2udTm1YPQsy0VJV8+6GtbU3iylMy/+CiSCKOYSEaGo5P [...]
              "startup-script": "#!/bin/bash\napt-get update\napt-get install -y docker.io python3-pip curl\nsystemctl enable docker\nsystemctl start docker\nusermod -aG docker ubuntu\n      \n# Установка Docker Compose\ncurl -L \"https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nchmod +x /usr/local/bin/docker-compose\n"
            },
            "metadata_fingerprint": "ls1sWZUpYqA=",
            "name": "instahelper-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.173.127.14",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-subnet",
                "subnetwork_project": "instahelper-1772547417"
              }
            ],
            "project": "instahelper-1772547417",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/instances/instahelper-server",
            "service_account": [
              {
                "email": "776970716796-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "load-balanced-backend",
              "ssh-server"
            ],
            "tags_fingerprint": "rx2v0trihOs=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gitlab_runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/disks/gitlab-runner-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/instahelper-1772547417/zones/us-central1-a/instances/gitlab-runner-vm",
            "instance_id": "5336384580725571045",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCWC436Z6OQrUXXgNAPLtvX25Kn1uR1DUIWhLYjmsksmNtSoqpzBXc81ijJn9F3/rmnkPYA7YYyZIDF7ivAbI+U0Yp56PCYMDwBcuNyKHxu3h2So2IiBbD5JDut3lL2J1d98YGrUGFNt0gu9vp87TJR07iSHnYae37WtNqYRvhoSJBwY4E9GG+PNm4zEE8Utay6c/dD2FdabGFvCwLJlVfwgaIInr/cooGfqZcphG+lI/cb2B2LwYrlYD5D04wQoVGSc/IgW4TMG1L+q6FmjpSX+1tz89gzpb7yFZD8jpNysrdWPoeq+K0QGMY8RBjf/E67SC3IbZ6uyraGuQCx3pWWUALYaP5LBooou6hVXg2z8SQ0G13pUnj8IB58/h4FoC2udTm1YPQsy0VJV8+6GtbU3iylMy/+CiSCKOYSEaGo5P [...]
              "startup-script": "#!/bin/bash\napt-get update\napt-get install -y docker.io curl wget git\nsystemctl enable docker\nsystemctl start docker\nusermod -aG docker ubuntu\n\n# Скачивание и установка актуальной версии GitLab Runner\ncurl -LJO \"https://gitlab-runner-downloads.s3.amazonaws.com/latest/deb/gitlab-runner_amd64.deb\"\n# Важно: Проверяем, что файл скачался, прежде чем пытаться его установить\nif [ -f \"gitlab-runner_amd64.deb\" ]; then\n  dpkg -i gitlab-runner_amd64.deb\nelse [...]
            },
            "metadata_fingerprint": "Xg0CaBPwsfo=",
            "name": "gitlab-runner-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.55.212",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
                "network_ip": "10.10.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-subnet",
                "subnetwork_project": "instahelper-1772547417"
              }
            ],
            "project": "instahelper-1772547417",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/instances/gitlab-runner-vm",
            "service_account": [
              {
                "email": "776970716796-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 40,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/disks/monitoring-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/instahelper-1772547417/zones/us-central1-a/instances/monitoring-vm",
            "instance_id": "2517401895715252348",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCWC436Z6OQrUXXgNAPLtvX25Kn1uR1DUIWhLYjmsksmNtSoqpzBXc81ijJn9F3/rmnkPYA7YYyZIDF7ivAbI+U0Yp56PCYMDwBcuNyKHxu3h2So2IiBbD5JDut3lL2J1d98YGrUGFNt0gu9vp87TJR07iSHnYae37WtNqYRvhoSJBwY4E9GG+PNm4zEE8Utay6c/dD2FdabGFvCwLJlVfwgaIInr/cooGfqZcphG+lI/cb2B2LwYrlYD5D04wQoVGSc/IgW4TMG1L+q6FmjpSX+1tz89gzpb7yFZD8jpNysrdWPoeq+K0QGMY8RBjf/E67SC3IbZ6uyraGuQCx3pWWUALYaP5LBooou6hVXg2z8SQ0G13pUnj8IB58/h4FoC2udTm1YPQsy0VJV8+6GtbU3iylMy/+CiSCKOYSEaGo5P [...]
            },
            "metadata_fingerprint": "rMQF0uckxP4=",
            "name": "monitoring-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.46.118.226",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
                "network_ip": "10.10.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-subnet",
                "subnetwork_project": "instahelper-1772547417"
              }
            ],
            "project": "instahelper-1772547417",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/instances/monitoring-vm",
            "service_account": [
              {
                "email": "776970716796-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "monitoring-server",
              "ssh-server"
            ],
            "tags_fingerprint": "jTC_hIOTxDw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/instahelper-1772547417/global/networks/instahelper-vpc",
            "mtu": 0,
            "name": "instahelper-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1191977006804979431",
            "project": "instahelper-1772547417",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-03T06:28:39.503-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "instahelper-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "instahelper-1772547417",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "instahelper_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-03T06:30:51.156-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/instahelper-1772547417/global/targetHttpProxies/instahelper-http-proxy",
            "name": "instahelper-http-proxy",
            "project": "instahelper-1772547417",
            "proxy_bind": false,
            "proxy_id": 6853650849702039156,
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/targetHttpProxies/instahelper-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/urlMaps/instahelper-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.instahelper_backend",
            "google_compute_health_check.instahelper_health",
            "google_compute_instance.app_server",
            "google_compute_instance_group.instahelper_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.instahelper_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "instahelper_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-03T06:30:48.079-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/backendServices/instahelper-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "5XFQj0rk51c=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/instahelper-1772547417/global/urlMaps/instahelper-url-map",
            "map_id": 890111466698133111,
            "name": "instahelper-url-map",
            "path_matcher": [],
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/urlMaps/instahelper-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.instahelper_backend",
            "google_compute_health_check.instahelper_health",
            "google_compute_instance.app_server",
            "google_compute_instance_group.instahelper_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}